--- a/index.html
+++ b/index.html
@@ -189,9 +189,6 @@
         <a href="mailto:ryanzera.dev@gmail.com">
           <img src="https://img.shields.io/badge/-ryanzera.dev@gmail.com-dc3545?style=flat-square&logo=Gmail&logoColor=white" alt="Email">
         </a>
-        <a href="https://www.linkedin.com/in/ryan-bernardo-558858327/" target="_blank" rel="noopener noreferrer">
-          <img src="https://img.shields.io/badge/-Ryan%20Bernardo-dc3545?style=flat-square&logo=Linkedin&logoColor=white" alt="LinkedIn">
-        </a>
       </div>
     </header>
 
@@ -223,7 +220,7 @@
       <section class="section">
         <h2>Contato</h2>
         <p><strong>Pronto para levar seu projeto ao próximo nível?</strong></p>
-        <a href="mailto:ryanzera.dev@gmail.com" class="btn">Entre em Contato</a>
+        <a href="https://www.instagram.com/euoryan/" class="btn">Entre em Contato</a>
       </section>
     </main>
   </div>
