A vida é curta, e o resto... bem, você já sabe ;)

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <base href="https://ryanportfolio.com/" />
+  <base href="https://euoryan.com/" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ryan Bernardo - Desenvolvedor & Designer</title>
@@ -195,7 +195,7 @@
     <main>
       <section class="section">
         <h2>Sobre Mim</h2>
-        <p>Olá! Sou Ryan Bernardo, também conhecido como "euoryan". Atuo como freelancer especializado em <strong>Desenvolvimento de Automações</strong>, <strong>Integrações</strong> e <strong>Design</strong>.</p>
+        <p>Olá! Sou Ryan Bernardo, também conhecido no instagram como "euoryan". Atuo como freelancer especializado em <strong>Desenvolvimento de Automações</strong>, <strong>Integrações</strong> e <strong>Design</strong>.</p>
         <p>Minha paixão é criar soluções eficientes e inovadoras que otimizam processos e melhoram a produtividade. Com uma abordagem centrada no usuário, busco sempre entregar resultados que não apenas atendam, mas superem as expectativas dos clientes.</p>
       </section>
 
